# autouploader

./: .deepsource.toml  .env.example  .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  pr.md  pyproject.toml  requirements.txt  test_output.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
app/: config.py  crypto.py  exceptions.py  main.py  models.py
app/auth/: dependencies.py  oauth.py  routes.py  schemas.py  simple_auth.py
app/core/: dependencies.py  protocols.py
app/drive/: __init__.py  repositories.py  routes.py  schemas.py  service.py  services.py
app/queue/: __init__.py  manager.py  manager_db.py  repositories.py  routes.py  schemas.py  worker.py
app/settings/: __init__.py  repositories.py  routes.py  schemas.py
app/static/css/: styles.css
app/static/js/: dashboard.js
app/tasks/: __init__.py  scheduled_upload.py  services.py
app/templates/: base.html  dashboard.html  login.html
app/youtube/: __init__.py  quota.py  routes.py  schemas.py  service.py
docs/: 00_project_overview.md  02_modules.md  03_data_flow.md  api_usage_justification.md  index.md  privacy.md  terms.md  youtube_quota_request.md
tests/: conftest.py  test_config.py  test_database_persistence.py  test_e2e_upload_flow.py  test_main.py  test_oauth_encryption.py  test_queue.py  test_queue_persistence.py  test_settings_switch.py  test_worker_process.py  test_youtube_optimization.py
tests/unit/: test_error_handlers.py  test_services.py
tests/unit/auth/: __init__.py  test_routes.py
tests/unit/drive/: __init__.py  test_routes.py
(+5 files in other folders)
